[project]
name = "weather-ag-ui"
version = "0.1.0"
description = "AG2 weather agent with A2A server and UI cards for Open-Meteo."
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "ag2[ag-ui,openai] @ git+https://github.com/ag2ai/ag2.git@main",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "uvicorn>=0.40.0",
]

[tool.uv]
package = false
